add_subdirectory(ASC_Sequoia)
add_subdirectory(BitBench)
add_subdirectory(Fhourstones)
add_subdirectory(Fhourstones-3.1)
add_subdirectory(FreeBench)
add_subdirectory(McCat)
add_subdirectory(NPB-serial)
add_subdirectory(Ptrdist)
add_subdirectory(SciMark2-C)
add_subdirectory(VersaBench)
add_subdirectory(llubenchmark)
add_subdirectory(nbench)
add_subdirectory(Rodinia)

if(NOT ARCH STREQUAL "K1C")
  add_subdirectory(ASCI_Purple) # load-store-packing fail
  add_subdirectory(MallocBench)
  add_subdirectory(MiBench)
  add_subdirectory(Olden) # load-store-packing fail
  add_subdirectory(Prolangs-C)
  add_subdirectory(Trimaran)
  add_subdirectory(mediabench)
  add_subdirectory(sim)
  add_subdirectory(DOE-ProxyApps-C)
endif()

if((NOT "${TARGET_OS}" STREQUAL "Darwin") OR (NOT "${ARCH}" STREQUAL "ARM"))
  add_subdirectory(TSVC)
endif()
if(NOT ARCH STREQUAL "K1C")
  add_subdirectory(Prolangs-C++)
  add_subdirectory(Bullet)
  add_subdirectory(tramp3d-v4) # fatal error: error in backend: Cannot select: 0xcb9b070: i32,ch = AtomicLoad<(volatile load monotonic 1 from `i8* bitcast (i64* @_ZGVZN5Pooma23incrementNumExpressionsElE5mutex to i8*)`, align 8)> 0x433c738, 0xcb9b008
  if(NOT "${ARCH}" STREQUAL "Hexagon")
    add_subdirectory(DOE-ProxyApps-C++)
    add_subdirectory(DOE-ProxyApps-C)
    add_subdirectory(MiBench)
  endif()
  if(NOT "${ARCH}" STREQUAL "XCore")
    add_subdirectory(7zip)
    add_subdirectory(PAQ8p)
  endif()
  if(NOT DEFINED SMALL_PROBLEM_SIZE)
    add_subdirectory(mafft)
  endif()
endif()
