add_subdirectory(Adobe-C++)
add_subdirectory(BenchmarkGame)
add_subdirectory(CoyoteBench)
add_subdirectory(Dhrystone)
add_subdirectory(Linpack)
add_subdirectory(McGill)
add_subdirectory(Misc)
add_subdirectory(Misc-C++)
add_subdirectory(Misc-C++-EH)
add_subdirectory(Polybench)
add_subdirectory(Shootout)
add_subdirectory(Shootout-C++)
if(NOT ARCH STREQUAL "K1C")
  add_subdirectory(SmallPT) # Doesn't build in Debug mode
endif()
add_subdirectory(Stanford)
