add_subdirectory(Adobe-C++)
add_subdirectory(BenchmarkGame)
add_subdirectory(CoyoteBench)
add_subdirectory(Dhrystone)
add_subdirectory(Linpack)
add_subdirectory(McGill)
add_subdirectory(Misc)
add_subdirectory(Misc-C++)
add_subdirectory(Misc-C++-EH)
add_subdirectory(Polybench)
add_subdirectory(Shootout)
add_subdirectory(Shootout-C++)
if(ARCH STREQUAL "K1C" AND NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
  add_subdirectory(SmallPT)
endif()
add_subdirectory(Stanford)
