if(ARCH STREQUAL "K1C")
  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "K1COSGCC")
    add_subdirectory(C++11)
  endif()
else()
  add_subdirectory(C++11)
endif()
add_subdirectory(SignlessTypes)
add_subdirectory(Threads)
add_subdirectory(Vector)
if(ARCH STREQUAL "K1C")
  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "K1COSGCC")
    add_subdirectory(Vectorizer)
  endif()
else()
  add_subdirectory(Vectorizer)
endif()
# FIXME: Disable SJLJ tests for now, until EH edges are represented.
# add_subdirectory(SetjmpLongjmp)
if(TARGET_OS STREQUAL "Darwin")
  add_subdirectory(ObjC)
  add_subdirectory(ObjC++)
endif()

file(GLOB Source RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c *.cpp)
if(TARGET_OS STREQUAL "Darwin")
  list(REMOVE_ITEM Source 2007-04-25-weak.c)
  if(ARCH STREQUAL "PowerPC")
    list(REMOVE_ITEM Source AtomicOps.c)
  endif()
endif()
if(ARCH STREQUAL "AArch64")
  list(REMOVE_ITEM Source blockstret.c)
endif()
if(ARCH STREQUAL "Mips")
  add_subdirectory(Mips)
  # Only MIPS 64-bit supports 8 bytes atomic operations.
  if(NOT MIPS_IS_MIPS64_ENABLED)
    list(REMOVE_ITEM Source AtomicOps.c)
  endif()
endif()
if(ARCH STREQUAL "XCore")
  list(REMOVE_ITEM Source AtomicOps.c)
  list(REMOVE_ITEM Source initp1.cpp)
endif()
list(APPEND LDFLAGS -lstdc++)
if(NOT ARCH STREQUAL "x86")
  list(REMOVE_ITEM Source
    ms_struct-bitfield.c
    ms_struct-bitfield-1.c
    ms_struct-bitfield-init.c
    ms_struct-bitfield-init-1.c
    ms_struct_pack_layout.c
    ms_struct_pack_layout-1.c
  )
endif()
if(ARCH STREQUAL "K1C")
  if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "K1COSGCC")
    list(REMOVE_ITEM Source 2007-04-25-weak.c)
  else()
    list(REMOVE_ITEM Source stmtexpr.cpp AtomicOps.c)
    list(REMOVE_ITEM Source initp1.cpp) #OK in O0
    list(REMOVE_ITEM Source 2003-05-07-VarArgs.c 2003-08-11-VaListArg.c) # fail since bundling introduction
  endif()
endif()
llvm_singlesource()
